Update market end-point
