# src/build/swagger.json
@@ -134,6 +134,21 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ListingSort": {
+				"enum": [
+					"recent",
+					"num",
+					"price"
+				],
+				"type": "string"
+			},
+			"SortDirection": {
+				"enum": [
+					"ASC",
+					"DESC"
+				],
+				"type": "string"
+			},
 			"Listing": {
 				"properties": {
 					"txid": {
@@ -712,7 +727,44 @@
 					}
 				},
 				"security": [],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "query",
+						"name": "sort",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/ListingSort"
+						}
+					},
+					{
+						"in": "query",
+						"name": "dir",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/SortDirection"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"default": 100,
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "offset",
+						"required": false,
+						"schema": {
+							"default": 0,
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/api/market/recent": {
